--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-body {
+html {
+  font-size: 62.5%;
+}
+
+html body {
   font-family: 'Roboto', sans-serif;
   color: #454545;
   margin: 0;
+}
+
+.main__wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main__container {
+  width: 100%;
+  max-width: 120rem;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=global.css.map */
