--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,11 +3,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-    margin: 0
+    margin: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
-    color: $black;
-    margin: 0;
+html {
+    font-size: 62.5%;
+
+    body {
+        font-family: 'Roboto', sans-serif;
+        color: $black;
+        margin: 0;
+    }
+}
+
+.main {
+    &__wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    &__container {
+        width: 100%;
+        max-width: 120rem;
+        margin: 0 auto;
+    }
 }
