--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,9 +7,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__logo {
@@ -27,11 +27,14 @@
 
 .header__city {
   font-size: 1.8rem;
-  line-height: 2.1rem;
+  line-height: 1.8rem;
+  font-weight: 300;
 }
 
 .header__span {
   font-size: 1.2rem;
   line-height: 1.4rem;
+  font-weight: 400;
+  margin-right: 1.2rem;
 }
 /*# sourceMappingURL=style.css.map */
