Adição, estilização e primeiras ações das Pills via PropTypes

--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -30,4 +30,10 @@
             width: 80%;
         }
     }
+
+    &__pills {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
