--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -34,4 +34,16 @@
 .home__image img {
   width: 80%;
 }
+
+.home__pills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
 /*# sourceMappingURL=styles.css.map */
