--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root {
+  --black: #454545;
+  --green: #00B6C1;
+  --blue: #0036C1;
+  --lightGray: #BFBFC0;
+  --white: #ffffff;
+}
+
 * {
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -12,7 +20,7 @@ html {
 
 html body {
   font-family: 'Roboto', sans-serif;
-  color: #454545;
+  color: var(--black);
   margin: 0;
 }
 
