--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ html {
 
     body {
         font-family: 'Roboto', sans-serif;
-        color: $black;
+        color: var(--black);
         margin: 0;
     }
 }
