Criação da CONFIG no index da página e correção na distância entre parágrafo e Pills na Home

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -45,5 +45,6 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin: 4rem 0;
 }
 /*# sourceMappingURL=styles.css.map */
